--- a/src/app/components/authentication/authentication.component.html
+++ b/src/app/components/authentication/authentication.component.html
@@ -24,7 +24,7 @@
               </label>
               <input
                 type="text"
-                class="form-control bg-black"
+                class="form-control"
                 name="lEmail"
                 onChange="{handleInputChange}"
                 placeholder="Ingresar email"
@@ -38,7 +38,7 @@
               </label>
               <input
                 type="password"
-                class="form-control bg-black"
+                class="form-control"
                 name="lPassword"
                 onChange="{handleInputChange}"
                 placeholder="Ingresar contraseña"
@@ -91,7 +91,7 @@
               <div>
                 <input
                   type="text"
-                  class="form-control bg-black"
+                  class="form-control"
                   name="rName"
                   id="exampleInputName"
                   placeholder="Nombre y apellido"
@@ -102,7 +102,7 @@
               <div>
                 <input
                   type="text"
-                  class="form-control bg-black mt-3"
+                  class="form-control mt-3"
                   id="exampleInputEmail1"
                   name="rEmail"
                   placeholder="Email"
@@ -112,7 +112,7 @@
               <div>
                 <input
                   type="password"
-                  class="form-control bg-black mt-3"
+                  class="form-control mt-3"
                   id="exampleInputPassword1"
                   name="rPassword"
                   placeholder="Contraseña"
@@ -123,7 +123,7 @@
               <div>
                 <input
                   type="password"
-                  class="form-control bg-black mt-3"
+                  class="form-control mt-3"
                   id="exampleInputPassword2"
                   name="rPasswordConfirm"
                   placeholder="Confirmar contraseña"
