se agrego id en routerLink

--- a/src/app/components/lista-de-peliculas/lista-de-peliculas.component.html
+++ b/src/app/components/lista-de-peliculas/lista-de-peliculas.component.html
@@ -52,7 +52,7 @@
       <div class="card-body">
         <h5 class="card-title">{{peli.titulo}}</h5>
         <p class="card-text mb-5">{{peli.descripcion}}</p>
-        <a routerLink="/info/1" routerLinkActive="active" class="btn btn-primary mb-2" style="position:absolute;bottom:0;"
+        <a routerLink="/info/{{peli.id}}" routerLinkActive="active" class="btn btn-primary mb-2" style="position:absolute;bottom:0;"
           >ver informacion</a
         >
       </div>
