--- a/src/app/components/lista-de-peliculas/lista-de-peliculas.component.css
+++ b/src/app/components/lista-de-peliculas/lista-de-peliculas.component.css
@@ -8,13 +8,14 @@
   display: flex;
   justify-content: center;
   background-color: #020d18;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  height: 500px;
+  margin-top: 100px;
 }
 
-
-
-.spacer {
-  flex: 1;
+.movie-item {
+  margin:10px;
+  background-color:rgb(87, 10, 10)
 }
 
 .toolbar {
@@ -50,8 +51,6 @@
 
 
 
-
-
 footer {
   margin-top: 8px;
   display: flex;
@@ -64,41 +63,6 @@ footer {
     align-items: center;
   }
 
-
-
-
-
-
-
-/*Mis estilos*/
-
-.formBusqueda {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0.7
-}
-
-.submitBusqueda {
-  background-color: rgb(10, 19, 38);
-  width: 4%;
-  height: 50px;
-  border: 2px #1E344A solid
-}
-
-.inputBusqueda {
-  height: 50px;
-  width: 80%;
-  border: 2px #1E344A solid;
-  background-color: rgb(14, 36, 81)
-}
-
-
-.card {
-  margin: 10px;
-}
 
 a {
   color: whitesmoke;
