--- a/src/app/components/lista-de-peliculas/lista-de-peliculas.component.html
+++ b/src/app/components/lista-de-peliculas/lista-de-peliculas.component.html
@@ -1,22 +1,18 @@
-<!-- <app-nav></app-nav> -->
 
-<h1 class="text-center text-light">Listado de Peliculas</h1>
-<br />
 
-<!--Seccion principal-->
-<main class="principal">
-
-    <div class="card" style="width: 15rem; height: auto" *ngFor="let peli of peliculas">
-        <img style="height: auto;" src="{{peli.imagen}}" class="card-img-top" alt="..." />
-        <div class="card-body">
-            <h5 class="card-title">{{peli.titulo}}</h5>
-            <p class="card-text mb-5">{{peli.descripcion}}</p>
-            <a routerLink="/info/{{peli.id}}" routerLinkActive="active" class="btn btn-primary mb-2" style="position:absolute;bottom:0;">ver informacion</a
-        >
-      </div>
+<main class="principal" style="height:auto;">
+  
+  <div class="movie-item" *ngFor="let peli of peliculas">
+    <div class="mv-img">
+      <img src="{{peli.imagen}}" alt="" style="height: 254px; width: 203px; object-fit: cover;">
     </div>
- 
+
+    <div class="title-in" style="padding:5px">
+      <h6 class="text-center"><a routerLink="/info/{{peli.id}}" routerLinkActive="active">{{peli.titulo}}</a></h6>
+    </div>
+  </div>
+
 
 </main>
 
-<!-- <app-footer></app-footer> -->
+
