--- a/src/app/components/info-peliculas/info-peliculas.component.css
+++ b/src/app/components/info-peliculas/info-peliculas.component.css
@@ -1,98 +1,64 @@
 
+.principal {
+  margin-top: 100px;
+  display:flex;
+  justify-content:center;
 
-.spacer {
-  flex: 1;
+}
+.contenedor {
+  display:flex;
+  width:80%;
+  background-color: #020d18;
+
+
 }
 
-.toolbar {
-  height: 60px;
+.izquierda {
+display:flex;
+flex-direction:column;
+margin:25px;
+}
+
+
+.info-item {
+  border:1px solid black;
+}
+
+.item {
+  border: 1px solid black;
+  display:flex;
+  justify-content: space-between;
+  color:whitesmoke;
+  font-family:Aller
+}
+
+.derecha {
+  width:80%;
   display: flex;
-  align-items: center;
-  background-color: rgb(0, 0, 0, 0,33);
-  color: white;
-  font-weight: 600;
-  display: flex;
-  width: 80%;
+  flex-direction:column;
+  align-content: center;
+  margin:25px;
 }
 
-  .toolbar img {
-    margin: 0 16px;
-  }
-
-  .toolbar #twitter-logo {
-    height: 40px;
-    margin: 0 8px;
-  }
-
-  .toolbar #youtube-logo {
-    height: 40px;
-    margin: 0 16px;
-  }
-
-    .toolbar #twitter-logo:hover,
-    .toolbar #youtube-logo:hover {
-      opacity: 0.8;
-    }
-
-
-
-
-
-
-footer {
-  margin-top: 8px;
-  display: flex;
-  align-items: center;
-  line-height: 20px;
+.descripcion {
+  font-family:Aller;
+  font-size:larger;
+  text-align:center
 }
 
-  footer a {
-    display: flex;
-    align-items: center;
-  }
-
-
-
-
-
-
-
-/*Mis estilos*/
-
-.formBusqueda {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0.7
-}
-
-.submitBusqueda {
-  background-color: rgb(10, 19, 38);
-  width: 4%;
-  height: 50px;
-  border: 2px #1E344A solid
-}
-
-.inputBusqueda {
-  height: 50px;
-  width: 80%;
-  border: 2px #1E344A solid;
-  background-color: rgb(14, 36, 81)
-}
-
-
-.card {
-  margin: 10px;
-}
-
-a {
+.boton {
+  margin-top: 15px;
+  background-color: rgb(116, 25, 55);
+  border-radius: 25px;
+  height: auto;
+  font-size: 25px;
   color: whitesmoke;
-  text-decoration: none;
+  text-align:center;
+  font-family:Aller;
 }
 
-  a:hover {
+
+  .boton:hover {
     color: greenyellow;
     transition: 0.2s;
     text-decoration: none;
