--- a/src/app/components/info-peliculas/info-peliculas.component.html
+++ b/src/app/components/info-peliculas/info-peliculas.component.html
@@ -1,10 +1,33 @@
-<!-- <app-nav></app-nav> -->
 
-<h1 class="text-center text-light">Pelicula: {{tituloPelicula}}</h1>
-<br />
 
-<h2 class="text-light text-center">
-    DESARROLLAR ACA LA INFORMACION DE LA PELICULA
-</h2>
 
-<!-- <app-footer></app-footer> -->
+<main class="principal">
+
+  <div class="contenedor">
+
+    <div class="izquierda">
+    <div>
+      <img src="{{imagen}}" style="height:500px;" />
+    </div>
+
+    <ul class="info-item">
+      <li class="item"> GENERO: <span>AVENTURA</span></li>
+      <li class="item"> DURACION: <span>120 MIN</span></li>
+      <li class="item"> ACTORES: <span> LUISITO</span></li>
+      <li class="item"> DIRECTOR:<span> JUAN RIQUELME </span></li>
+    </ul>
+    </div>
+
+    <div class="derecha">
+
+      <youtube-player videoId="{{trailer}}"></youtube-player>
+      <p class="descripcion">{{descripcion}}</p>
+
+      <a routerLink="/" routerLinkActive="active" class="boton">Mira las funciones de {{tituloPelicula}}</a>
+    </div>
+
+
+
+  </div>
+
+</main>
