--- a/src/app/components/lista-de-peliculas/lista-de-peliculas.component.html
+++ b/src/app/components/lista-de-peliculas/lista-de-peliculas.component.html
@@ -1,10 +1,10 @@
 
 
-<main class="principal" style="height:auto;">
+<main class="principal">
   
   <div class="movie-item" *ngFor="let peli of peliculas">
     <div class="mv-img">
-      <img src="{{peli.imagen}}" alt="" style="height: 254px; width: 203px; object-fit: cover;">
+      <img src="{{peli.imagen}}" alt="imgPeli">
     </div>
 
     <div class="title-in" style="padding:5px">
