--- a/src/app/components/info-peliculas/info-peliculas.component.css
+++ b/src/app/components/info-peliculas/info-peliculas.component.css
@@ -1,65 +1,87 @@
 
 .principal {
   margin-top: 100px;
-  display:flex;
-  justify-content:center;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:100%;
 }
-.contenedor {
-  display:flex;
-  width:80%;
+
+.contenedorFunciones {
+  width: 85%;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(9, 8, 8)
+}
+
+.dias {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+}
+
+li {
+  color: white;
+  font-family:Aller;
+  border: 1px solid white;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 5px;
+  margin-top:15px;
+  font-size:large
+}
+
+
+.diasLink {
+  color: whitesmoke;
+}
+
+  .diasLink:hover {
+    color: rgb(198, 255, 0);
+    transition: 0.2s;
+    text-decoration: none;
+  }
+
+.contenedorInformacion {
+  display: flex;
+  width: 85%;
   background-color: #020d18;
-
-
 }
 
 .izquierda {
-display:flex;
-flex-direction:column;
-margin:25px;
+  display: flex;
+  flex-direction: column;
+  margin: 25px;
 }
 
-
 .info-item {
-  border:1px solid black;
+  border: 1px solid black;
+
 }
 
 .item {
   border: 1px solid black;
-  display:flex;
+  display: flex;
   justify-content: space-between;
-  color:whitesmoke;
-  font-family:Aller
+  color: whitesmoke;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size:small;
 }
 
 .derecha {
-  width:80%;
+  width: 80%;
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   align-content: center;
-  margin:25px;
+  margin: 25px;
 }
 
 .descripcion {
-  font-family:Aller;
-  font-size:larger;
-  text-align:center
-}
-
-.boton {
-  margin-top: 15px;
-  background-color: rgb(116, 25, 55);
-  border-radius: 25px;
-  height: auto;
-  font-size: 25px;
-  color: whitesmoke;
-  text-align:center;
-  font-family:Aller;
+  font-family: Aller;
+  font-size: larger;
+  text-align: center
 }
 
 
-  .boton:hover {
-    color: greenyellow;
-    transition: 0.2s;
-    text-decoration: none;
-  }
