arreglando navbar y agregando reserva

--- a/src/app/components/reserva/reserva.component.html
+++ b/src/app/components/reserva/reserva.component.html
@@ -1,1 +1,24 @@
-<p>reserva works!</p>
+<!-- <div class="divContainer">
+  <div>
+    <div></div>
+
+    <select name="" id="">
+      <option value=""></option>
+    </select>
+  </div>
+
+  <div>
+    <div class="divDias"></div>
+
+    <div class="divHorarios">
+      <div></div>
+
+      <div></div>
+      <div></div>
+    </div>
+
+    <div class="divAsientos"></div>
+
+    <button class="buttonComprar">Comprar</button>
+  </div>
+</div> -->
