--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navContainer container-fluid fixed-top p-5">
+<nav class="navContainer container-fluid fixed-top p-3">
   <div class="d-flex flex-row justify-content-between align-items-center">
     <div class="d-flex align-items-center">
       <div routerLink="/" class="navbar-header logo">
@@ -20,9 +20,9 @@
       </div>
 
       <div style="position: relative; top: 5px" class="d-flex ms-5">
-        <h4 routerLink="/" class="h4Buttons mx-3">INICIO</h4>
-        <h4 routerLink="/peliculas" class="h4Buttons mx-3">PELICULAS</h4>
-        <h4 class="h4Buttons mx-3">FAQS</h4>
+        <p routerLink="/" class="pButtons mx-3">INICIO</p>
+        <p routerLink="/peliculas" class="pButtons mx-3">PELICULAS</p>
+        <p class="pButtons mx-3">FAQS</p>
       </div>
     </div>
 
@@ -42,25 +42,25 @@
       </form>
     </div>
     <div style="position: relative; top: 5px" class="d-flex">
-      <h4
+      <p
         href="javascript:void(0);"
         *ngIf="buscador == false"
         (click)="buscador = true"
-        class="h4Buttons mx-3"
+        class="pButtons mx-3"
       >
         BUSCAR
-      </h4>
-      <h4
-        class="h4Buttons mx-3"
+      </p>
+      <p
+        class="pButtons mx-3"
         *ngIf="buscador == true"
         href="javascript:void(0);"
         (click)="buscador = false"
       >
         CANCELAR
-      </h4>
+      </p>
 
-      <h4 routerLink="/login" class="h4Buttons mx-3">INICIAR SESIÓN</h4>
-      <h4 routerLink="/login" class="h4Buttons mx-3">REGISTRO</h4>
+      <p routerLink="/login" class="pButtons mx-3">INICIAR SESIÓN</p>
+      <p routerLink="/login" class="pButtons mx-3">REGISTRO</p>
     </div>
   </div>
 </nav>
