--- a/src/app/components/admin/funciones-admin/funciones-admin.component.css
+++ b/src/app/components/admin/funciones-admin/funciones-admin.component.css
@@ -1,3 +1,13 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
+
+.container {
+  background-color: #020d18;
+}
+
+.fa-solid {
+  margin: 0 1rem;
+}
+
 .table {
   width: 100%;
   margin-bottom: 1rem;
