--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navContainer container-fluid fixed-top p-3">
+<nav class="navContainer container-fluid fixed-top p-3 nav-background">
   <div class="d-flex flex-row justify-content-between align-items-center">
     <div class="d-flex align-items-center">
       <div routerLink="/" class="navbar-header logo">
