Formulario e Input como componentes. Usados en Nuevo y Editar Película

--- a/src/app/components/admin/funciones-admin/funciones-admin.component.html
+++ b/src/app/components/admin/funciones-admin/funciones-admin.component.html
@@ -62,7 +62,9 @@
   <app-modal-detalles-pelicula
     [pelicula]="peliculaElegida"
   ></app-modal-detalles-pelicula>
-  <app-modal-editar-pelicula></app-modal-editar-pelicula>
+  <app-modal-editar-pelicula
+    [pelicula]="peliculaElegida"
+  ></app-modal-editar-pelicula>
   <app-modal-eliminar-pelicula
     [pelicula]="peliculaElegida"
   ></app-modal-eliminar-pelicula>
