--- a/src/app/components/admin/funciones-admin/modal-funciones-pelicula/modal-funciones-pelicula.component.html
+++ b/src/app/components/admin/funciones-admin/modal-funciones-pelicula/modal-funciones-pelicula.component.html
@@ -1,5 +1,1 @@
-<app-modal-general
-  [target]="target"
-  [titulo]="titulo"
-  [guardarAction]="true"
-></app-modal-general>
+<app-modal-general [target]="target" [titulo]="titulo"></app-modal-general>
