--- a/src/app/components/admin/funciones-admin/modal-editar-pelicula/modal-editar-pelicula.component.html
+++ b/src/app/components/admin/funciones-admin/modal-editar-pelicula/modal-editar-pelicula.component.html
@@ -1,3 +1,3 @@
-<app-modal-general [target]="target" [titulo]="titulo" [guardarAction]="true"
-  >Editar Película
+<app-modal-general [target]="target" [titulo]="titulo">
+  <app-formulario-pelicula [pelicula]="pelicula"></app-formulario-pelicula>
 </app-modal-general>
