--- a/src/app/components/modal-general/modal-general.component.html
+++ b/src/app/components/modal-general/modal-general.component.html
@@ -30,7 +30,9 @@
           <button type="button" class="btn btn-secondary" data-dismiss="modal">
             Cerrar
           </button>
-          <button type="button" class="btn btn-danger">Eliminar</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">
+            Eliminar
+          </button>
         </ng-container>
       </div>
     </div>
