--- a/src/app/components/modal-general/modal-general.component.html
+++ b/src/app/components/modal-general/modal-general.component.html
@@ -20,18 +20,10 @@
         </button>
       </div>
       <div class="modal-body"><ng-content></ng-content></div>
-      <div class="modal-footer" *ngIf="cerrarAction || eliminarAction">
-        <ng-container *ngIf="cerrarAction">
+      <div class="modal-footer" *ngIf="cerrarAction">
+        <ng-container>
           <button type="button" class="btn btn-primary" data-dismiss="modal">
             Cerrar
-          </button>
-        </ng-container>
-        <ng-container *ngIf="eliminarAction">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">
-            Cerrar
-          </button>
-          <button type="button" class="btn btn-danger" data-dismiss="modal">
-            Eliminar
           </button>
         </ng-container>
       </div>
