--- a/src/app/components/forms/input/input.component.html
+++ b/src/app/components/forms/input/input.component.html
@@ -1,9 +1,8 @@
 <div class="form-group" [formGroup]="formGroup">
-  <label for="exampleInputEmail1">{{ label }}</label>
+  <label>{{ label }}</label>
   <input
     type="{{ type }}"
     class="form-control"
-    id="exampleInputEmail1"
     placeholder="{{ placeholder }}"
     formControlName="{{ name }}"
     value="{{ value }}"
