--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -3,7 +3,7 @@
 }
 
 .navContainer {
-  background-color: #020d1867;
+  background-color: transparent;
 }
 
 .pButtons {
@@ -18,85 +18,3 @@
   transition: ease 0.3s;
 }
 
-.spacer {
-  flex: 1;
-}
-
-.toolbar {
-  height: 60px;
-  display: flex;
-  align-items: center;
-  background-color: rgb(0, 0, 0, 0, 33);
-  color: white;
-  font-weight: 600;
-  display: flex;
-  width: 80%;
-}
-
-.toolbar img {
-  margin: 0 16px;
-}
-
-.toolbar #twitter-logo {
-  height: 40px;
-  margin: 0 8px;
-}
-
-.toolbar #youtube-logo {
-  height: 40px;
-  margin: 0 16px;
-}
-
-.toolbar #twitter-logo:hover,
-.toolbar #youtube-logo:hover {
-  opacity: 0.8;
-}
-
-footer {
-  margin-top: 8px;
-  display: flex;
-  align-items: center;
-  line-height: 20px;
-}
-
-footer a {
-  display: flex;
-  align-items: center;
-}
-
-/*Mis estilos*/
-
-a {
-  color: whitesmoke;
-  text-decoration: none;
-}
-
-a:hover {
-  color: greenyellow;
-  transition: 0.2s;
-  text-decoration: none;
-}
-
-.input-busqueda-inicio {
-  border-radius: 20px;
-  font-family: "Dosis", sans-serif;
-  font-size: 14px;
-  color: #020d18;
-  font-weight: bold;
-  text-transform: uppercase;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.input-busqueda-inicio::placeholder {
-  font-family: "Dosis", sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.nav-background {
-  background: url('../../../assets/images/uploads/ft-bg.jpg') no-repeat;
-  background-position: center;
-  background-size: cover;
-}
